[WIP] Java 8 support